# KohakuEngine

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/: API.md  GOAL.md  PLAN.md  TODO.md  architecture.md  changelog.md  concepts.md  contributing.md  faq.md  index.md  installation.md  quickstart.md  tutorial.md
docs/guides/: bare-configs.md  config-cells.md  entrypoints.md  migration.md  overrides-and-validation.md  sweeps.md  workflows.md
docs/reference/: api.md  cli.md
examples/: run_scripts.py
examples/configs/: bare_config.py  base_hparams.py  capture_context_config.py  explicit_config_gen.py  from_globals_config.py  generator_from_globals_config.py  hello_config.py  nested_config.py  sweep_config.py  sweep_zip_config.py  train_config.py  use_functions_config.py  with_local_callable.py  with_use.py  worker_aware_config.py
examples/scripts/: hello.py  train_decorated.py  train_simple.py  train_with_cell.py
examples/workflows/: simple_workflow.py  sweep_workflow.py
src/kohakuengine/: __init__.py  cli.py  main.py  utils.py
src/kohakuengine/config/: __init__.py  base.py  generator.py  loader.py  types.py
src/kohakuengine/engine/: __init__.py  cell.py  coerce.py  entrypoint.py  executor.py  injector.py  introspect.py  script.py
src/kohakuengine/flow/: __init__.py  base.py  flow.py  parallel.py  sequential.py
tests/: conftest.py  test_cli.py  test_cli_unit.py  test_coverage_edges.py  test_main.py  test_types.py  test_utils.py
tests/test_config/: test_base.py  test_generator.py  test_loader.py  test_use_config.py
tests/test_engine/: test_cell.py  test_coerce.py  test_entrypoint.py  test_executor.py  test_injector.py  test_introspect.py  test_script.py
tests/test_flow/: test_flow.py  test_parallel.py  test_sequential.py
